fix white space again...

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -185,7 +185,7 @@
       justify-content: space-between;
       align-items: center;
       min-width: 100%;
-      min-height: 20vh;
+      min-height: 15vh;
     }
   }
   &--housePage {
@@ -330,7 +330,6 @@
     @include flex-row;
     justify-content: space-between;
     font-size: 1.5em;
-    margin-top: 5%;
     &-on {
       color: $color-primary;
     }
@@ -357,8 +356,10 @@
 
 /// Tags test
 .house__tags {
-  margin: 3% 0 2%;
+  margin: 3% 0 0;
   @include flex-row;
+  //align-items: flex-end;
+  align-content: flex-end;
   flex-wrap: wrap;
 }
 
@@ -366,6 +367,8 @@
   display: flex;
   min-height: 30px;
   margin-right: 10px;
+  margin: 10px 10px 10px 0;
+  //margin: 0 10px 0 0;
   padding: 0 30px 0;
   background-color: $color-primary;
   color: #e3e3e3;
@@ -381,7 +384,7 @@
   &__maincontainer {
     width: 100%;
     @include flex-column;
-    justify-content: space-evenly;
+    align-content: flex-start;
     &--picture {
       border-radius: 50%;
       width: 8vw;
@@ -389,6 +392,7 @@
     @media screen and (max-width: $breakpoint-mobile) {
       flex-direction: row-reverse;
       justify-content: space-between;
+      align-items: center;
       margin-top: 1em;
     }
   }
@@ -396,6 +400,10 @@
     @include flex-row;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1.3em;
+    @media screen and (max-width: $breakpoint-mobile) {
+      margin-bottom: 0;
+    }
     &--picture {
       border-radius: 50%;
       width: 64px;
